Fix the nav bar overlap the body between 767px to 1200px

--- a/SportEventManagementSystem/SportEventManagementSystem/wwwroot/css/site.css
+++ b/SportEventManagementSystem/SportEventManagementSystem/wwwroot/css/site.css
@@ -81,6 +81,19 @@ body {
     margin-top: 35px;
 }
 
+@media screen and (min-width: 767px) {
+    body {
+    margin-top: 85px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    body {
+        margin-top: 35px;
+    }
+}
+
+
 /* Carousel image*/
 .img-responsive {
     width: 100%;
